# safe-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
examples/: example.py
safe-mcp/: __init__.py  core.py  decorators.py
safe-mcp/sanitizers/: basic.py
safe-mcp/utils/: detection.py  patterns.py  utils.py
safe_mcp/: __init__.py  decorators.py
safe_mcp/sanitizers/: __init__.py  basic.py
safe_mcp/utils/: detection.py  patterns.py  utils.py
src/: __init__.py  decorators.py
src/sanitizers/: __init__.py  basic.py
src/utils/: detection.py
tests/: mock_test_data.py  test_decorators.py
