[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safe-mcp"
version = "0.1.0"
description = "Security framework for Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "safe-mcp contributors"}
]
keywords = ["mcp", "security", "llm", "ai", "context-poisoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.0.40",
]

[tool.hatch.build.targets.wheel]
packages = ["safe_mcp"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
ignore = []
